--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@themaximalist/llm.js": "^1.0.0"
   },
   "devDependencies": {
+    "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.2",
     "mini-css-extract-plugin": "^2.9.2",
     "source-map-loader": "^5.0.0",
